# agent-friendly-abi-framework

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  api_examples.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_tests.py  start_api.py  utils.py  zircuit_agent.py
abi_agent/: abi_decoder.py  contract_selector.py  function_call_generator.py  query_rewriter.py
llm_generation/: config.py  conversation_manager.py  task_processor.py
llm_generation/models/: __init__.py  base.py  data_structure.py  open_ai.py
prompt_template/: convert_query_to_function_calling.yml  decode_abi.yml  rewrite_user_query.yml  select_contracts.yml
tests/: __init__.py  conftest.py  mock_data_generator.py  test_cases.json  test_metrics.py  test_runner.py  test_unit.py
